# speexdsp-rs

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflow/: speexdsp.yml
.github/workflows/: speexdsp.yml
benches/: comparison.sh  resampling_c.rs  resampling_rust.rs  resampling_simple_c.rs  resampling_simple_c_dbl.rs  resampling_simple_rust.rs  resampling_simple_rust_dbl.rs
examples/: testdenoise.rs  testecho.rs  testjitter.rs  testresample.rs
fft/: Cargo.toml  README.md
fft/src/: dradb.rs  dradf.rs  fftwrap.rs  lib.rs  orig.rs  smallft.rs
fft/src/orig/: fftwrap.rs  smallft.rs
fft/tests/: fftwrap.rs  smallft.rs
fft/tests/orig/: fftwrap.rs  mod.rs  smallft.rs
resampler/: Cargo.toml  README.md
resampler/examples/: resample.rs  resample_interleaved.rs
resampler/src/: lib.rs  speex.rs
resampler/src/speex/: avx.rs  native.rs  sse3.rs
resampler/src/speex/dynnative/: avx_wrapper.rs  mod.rs  sse3_wrapper.rs
speexdsp-sys/: .gitignore  Cargo.toml  build.rs
speexdsp-sys/data/: echo.h  jitter.h  preprocess.h
speexdsp-sys/examples/: testdenoise_sys.rs  testecho.rs  testecho_sys.rs  testjitter.rs  testjitter_sys.rs  testresample.rs  testresample_interleaved_sys.rs  testresample_sys.rs
speexdsp-sys/src/: echo.rs  jitter.rs  lib.rs  preprocess.rs  resampler.rs
src/: echo.rs  jitter.rs  lib.rs  preprocess.rs  resampler.rs  speex_resample.rs
src/resampler/: test.rs
tests/: example.rs  proptest.proptest-regressions  proptest.rs  resampler.rs
