[package]
name = "speexdsp"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Bindings for the speexdsp library"
homepage = "https://github.com/rust-av/speexdsp-rs"
repository = "https://github.com/rust-av/speexdsp-rs"
keywords = ["audio", "resampler"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"
edition = "2018"

[features]
sys = ["speexdsp-sys"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
byteorder = "1.3"
interpolate_name = "0.2.2"
structopt = "0.3"

[dependencies]
speexdsp-sys = { version = "0.1.1", path = "speexdsp-sys", optional = true }
speexdsp-resampler = { version = "0.1", path = "resampler" }

[workspace]
members = ["speexdsp-sys", "resampler", "fft"]
