[package]
name = "speexdsp-resampler"
version = "0.2.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
description = "Pure rust port of the speexdsp resampler"
homepage = "https://github.com/rust-av/speexdsp-rs"
repository = "https://github.com/rust-av/speexdsp-rs"
keywords = ["audio", "resampler"]
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[features]
sse3 = []
avx = ["sse3"]
dynnative = ["avx"]

[dependencies]
cfg-if = "1.0.0"
