[package]
name = "speexdsp-sys"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "low level bindings for the speexdsp library"
repository = "https://github.com/rust-av/speexdsp-rs"
readme = "../README.md"
homepage = "https://github.com/rust-av/speexdsp-rs"
keywords = ["audio", "resampler"]
categories = ["api-bindings"]

[features]
build = []

[build-dependencies]
autotools = "0.1"
metadeps = "1.1"
bindgen = "0.33"

[package.metadata.pkg-config]
speexdsp = "1.2"
