[package]
name = "speexdsp-sys"
version = "0.1.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "low level bindings for the speexdsp library"
repository = "https://github.com/rust-av/speexdsp-rs"
readme = "../README.md"
homepage = "https://github.com/rust-av/speexdsp-rs"
keywords = ["audio", "resampler"]
categories = ["api-bindings"]

[build-dependencies]
autotools = "0.2"
system-deps = "6.0"
bindgen = "0.60.1"

[dev-dependencies]
byteorder = "1.3"
structopt = "0.3"

[package.metadata.system-deps]
speexdsp = "1.2"
